--- a/pran.html
+++ b/pran.html
@@ -218,7 +218,7 @@
 
     <!-- TABS -->
     <section class="py-4 border-top">
-      <div class="d-flex flex-wrap justify-content-center align-items-center gap-2 mb-2">
+      <div class="d-flex flex-wrap justify-content-center align-items-center gap-2 mb-1">
         <button class="tab-btn active" data-target="catalog">📘 Katalog</button>
         <button class="tab-btn" data-target="form">📄 Borang Akaun</button>
         <a href="https://wa.me/60128169367" target="_blank" class="btn btn-success ms-2">
@@ -236,7 +236,7 @@
           <h4 class="text-center mb-3 text-danger">Katalog Produk PRAN</h4>
           <div class="pdf-buttons text-center mb-3">
             <a href="catalog.pdf" class="btn btn-danger" download>📥 Muat Turun</a>
-            <a id="catalog-google" class="btn btn-outline-danger" target="_blank">👁️ Lihat dengan Google Docs Viewer</a>
+            <a id="catalog-google" class="btn btn-outline-danger" target="_blank">Buka dengan Google Docs Viewer</a>
           </div>
           <div class="pdf-box">
             <iframe src="" id="catalog-iframe" title="Katalog PRAN"></iframe>
@@ -248,7 +248,7 @@
           <h4 class="text-center mb-3 text-danger">Borang Buka Akaun Kopusamaju</h4>
           <div class="pdf-buttons text-center mb-3">
             <a href="borang-akaun.pdf" class="btn btn-danger" download>📥 Muat Turun</a>
-            <a id="form-google" class="btn btn-outline-danger" target="_blank">👁️ Lihat dengan Google Docs Viewer</a>
+            <a id="form-google" class="btn btn-outline-danger" target="_blank">Buka dengan Google Docs Viewer</a>
           </div>
           <div class="pdf-box">
             <iframe src="" id="form-iframe" title="Borang Akaun"></iframe>
