--- a/pran.html
+++ b/pran.html
@@ -261,10 +261,11 @@
     &nbsp;&nbsp; <!-- jarak sebelum footer -->
 
     <!-- FOOTER -->
-    <footer>
-      <strong>Kopusamaju Sabah Berhad</strong> | Ejen Rasmi PRAN<br>
-      © <span id="year"></span> Kopusamaju Sabah Berhad.
-    </footer>
+  <footer style="margin-top:80px;">
+    <strong>Kopusamaju Sabah Berhad</strong> | Pengedar Rasmi PRAN | Ejen Rasmi: Ahmad Amsari<br>
+    © <span id="year"></span> Kopusamaju Sabah Berhad.
+  </footer>
+
 
   </main>
 
