--- a/pran.html
+++ b/pran.html
@@ -191,22 +191,23 @@
 
     <!-- GALLERY / CAROUSEL -->
     <section class="gallery-section py-5">
-      <h4 class="gallery-title fw-bold">Galeri Produk PRAN</h4>
-      <div id="pranCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3500">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
+    <h4 class="gallery-title fw-bold">Galeri Produk PRAN</h4>
+    <div class="pdf-box">
+      <div id="pranCarousel" class="carousel slide h-100" data-bs-ride="carousel" data-bs-interval="3500">
+        <div class="carousel-inner h-100">
+          <div class="carousel-item active h-100 d-flex justify-content-center align-items-center">
             <a href="/pran/jus.png" class="glightbox" data-gallery="gallery-pran">
-              <img src="/pran/jus.png" class="d-block w-100" alt="Jus PRAN">
+              <img src="/pran/jus.png" class="d-block" style="max-height:100%; width:auto;" alt="Jus PRAN">
             </a>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item h-100 d-flex justify-content-center align-items-center">
             <a href="/pran/minumankotak.png" class="glightbox" data-gallery="gallery-pran">
-              <img src="/pran/minumankotak.png" class="d-block w-100" alt="Kotak PRAN">
+              <img src="/pran/minumankotak.png" class="d-block" style="max-height:100%; width:auto;" alt="Kotak PRAN">
             </a>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item h-100 d-flex justify-content-center align-items-center">
             <a href="/pran/wafer.png" class="glightbox" data-gallery="gallery-pran">
-              <img src="/pran/wafer.png" class="d-block w-100" alt="Wafer PRAN">
+              <img src="/pran/wafer.png" class="d-block" style="max-height:100%; width:auto;" alt="Wafer PRAN">
             </a>
           </div>
         </div>
@@ -219,7 +220,8 @@
           <span class="visually-hidden">Seterusnya</span>
         </button>
       </div>
-    </section>
+    </div>
+  </section>
 
     <!-- TABS -->
     <section class="py-4 border-top">
