--- a/pran.html
+++ b/pran.html
@@ -190,24 +190,24 @@
   <main class="container">
 
     <!-- GALLERY / CAROUSEL -->
-    <section class="gallery-section py-5">
+  <section class="gallery-section py-5">
     <h4 class="gallery-title fw-bold">Galeri Produk PRAN</h4>
-    <div class="pdf-box">
-      <div id="pranCarousel" class="carousel slide h-100" data-bs-ride="carousel" data-bs-interval="3500">
-        <div class="carousel-inner h-100">
-          <div class="carousel-item active h-100 d-flex justify-content-center align-items-center">
+    <div class="pdf-box p-2">
+      <div id="pranCarousel" class="carousel slide h-100" data-bs-ride="carousel" data-bs-interval="4000">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
             <a href="/pran/jus.png" class="glightbox" data-gallery="gallery-pran">
-              <img src="/pran/jus.png" class="d-block" style="max-height:100%; width:auto;" alt="Jus PRAN">
+              <img src="/pran/jus.png" class="img-fluid mx-auto d-block" style="max-height:100%; object-fit:contain;" alt="Jus PRAN">
             </a>
           </div>
-          <div class="carousel-item h-100 d-flex justify-content-center align-items-center">
+          <div class="carousel-item">
             <a href="/pran/minumankotak.png" class="glightbox" data-gallery="gallery-pran">
-              <img src="/pran/minumankotak.png" class="d-block" style="max-height:100%; width:auto;" alt="Kotak PRAN">
+              <img src="/pran/minumankotak.png" class="img-fluid mx-auto d-block" style="max-height:100%; object-fit:contain;" alt="Kotak PRAN">
             </a>
           </div>
-          <div class="carousel-item h-100 d-flex justify-content-center align-items-center">
+          <div class="carousel-item">
             <a href="/pran/wafer.png" class="glightbox" data-gallery="gallery-pran">
-              <img src="/pran/wafer.png" class="d-block" style="max-height:100%; width:auto;" alt="Wafer PRAN">
+              <img src="/pran/wafer.png" class="img-fluid mx-auto d-block" style="max-height:100%; object-fit:contain;" alt="Wafer PRAN">
             </a>
           </div>
         </div>
@@ -222,6 +222,7 @@
       </div>
     </div>
   </section>
+
 
     <!-- TABS -->
     <section class="py-4 border-top">
