--- a/pran.html
+++ b/pran.html
@@ -214,7 +214,7 @@
     <!-- GALLERY CAROUSEL AUTO-SCROLL -->
     <section class="gallery-section py-5">
       <h4 class="gallery-title fw-bold">Galeri Produk PRAN</h4>
-      <div class="pdf-box p-2">
+      <div class=>
         <div class="auto-carousel-wrapper">
           <div class="auto-carousel" id="autoCarousel">
             <a href="/pran/jus.png" class="glightbox" data-gallery="gallery-pran"><img src="/pran/jus.png" alt="Jus PRAN"></a>
