--- a/pran.html
+++ b/pran.html
@@ -5,7 +5,7 @@
   <title>PRAN — Produk Import Berkualiti | Kopusamaju Sabah Berhad</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png">
+  <link rel="icon" href="/pran/favicon.ico">
 
   <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -204,7 +204,7 @@
 
   <!-- HERO -->
   <section class="hero">
-    <img src="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png" alt="PRAN Logo">
+    <img src="/pran/pran.png" alt="PRAN Logo">
     <h1>Produk Import Berkualiti — Diedarkan oleh Kopusamaju Sabah Berhad</h1>
     <p>Ejen rasmi PRAN untuk pasaran tempatan</p>
   </section>
