--- a/order.html
+++ b/order.html
@@ -141,11 +141,12 @@
 
   <!-- Config - Ganti nilai di sini selepas deploy Apps Script -->
   <script>
-    const APPS_SCRIPT_WEBHOOK_URL = "PASTE_YOUR_APPS_SCRIPT_DEPLOY_URL_HERE"; // <-- deploy & paste di sini
-    const SECRET_TOKEN = "paste_a_strong_secret_here"; // <-- set sama di Code.gs
-    const OWNER_WHATSAPP = "60128169367"; // tanpa '+' or '00'
-    const QR_IMAGE_URL = ""; // optional override for QR image
+    const APPS_SCRIPT_WEBHOOK_URL = "PASTE_YOUR_DEPLOYED_WEB_APP_URL_HERE"; 
+    const SECRET_TOKEN = "PRAN-SECURE-9b8e47a2e37b4fd1b32b93dfc5eaa9b7";
+    const OWNER_WHATSAPP = "60128169367"; 
+    const QR_IMAGE_URL = "https://via.placeholder.com/260x260.png?text=QR+DuitNow"; 
   </script>
+
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
