--- a/order.html
+++ b/order.html
@@ -141,7 +141,7 @@
 
   <!-- Config - Ganti nilai di sini selepas deploy Apps Script -->
   <script>
-    const APPS_SCRIPT_WEBHOOK_URL = "PASTE_YOUR_DEPLOYED_WEB_APP_URL_HERE"; 
+    const APPS_SCRIPT_WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbyBI5xr4a88WJVY49fbzAmUFm7OD4nQLUDau5210zojf3VSssoW9J-D9VHWZ_kJ3T4cng/exec"; 
     const SECRET_TOKEN = "PRAN-SECURE-9b8e47a2e37b4fd1b32b93dfc5eaa9b7";
     const OWNER_WHATSAPP = "60128169367"; 
     const QR_IMAGE_URL = "https://via.placeholder.com/260x260.png?text=QR+DuitNow"; 
